--- a/part1/exercises/src/components/MovieList.module.css
+++ b/part1/exercises/src/components/MovieList.module.css
@@ -1,7 +1,10 @@
 .movieText {
-   color: black;
+	color: rebeccapurple;
+	text-align: left;
+	font-size: larger;
 }
 
 .movieHeading {
-   color: black;
+	color: black;
+	text-align: left;
 }
