--- a/part1/exercises/src/components/ChoresList.module.css
+++ b/part1/exercises/src/components/ChoresList.module.css
@@ -1,7 +1,13 @@
 .choresText {
-   color: black;
+	color: goldenrod;
+	font-size: larger;
+	font-style: italic;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 .choresHeading {
-   color: black;
+	color: goldenrod;
+	font-size: larger;
+	text-decoration: underline;
+	font-family: Arial, Helvetica, sans-serif;
 }
